--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <nav class="navigation">
     <div class="brand">
       <a href="#" class="brand--link">
-        <img class="brand--logo" src="assets/img/askanna-logo.svg" alt="AskAnna" />
+        <img class="brand--logo" src="assets/img/askanna-outline.svg" alt="AskAnna" />
       </a>
     </div>
     <ul class="menu mb--hidden">
@@ -66,10 +66,14 @@
       </p>
     </div>
   </header>
+  <div class="hero--devider">
+    <img src="assets/img/bg-graph.png" class="hero--devider--image" />
+  </div>
 
   <section class="demo">
     <h2 class="demo--title">Skip ahead, with AskAnna.</h2>
-    <img class="demo--visual" src="assets/img/mb-visual.png" alt="AskAnna Demo Visual" />
+    <img class="demo--visual mb--visual" src="assets/img/mb-visual.png" alt="AskAnna Demo Visual" />
+    <img class="demo--visual mb--hidden" src="assets/img/dt-visual.png" alt="AskAnna Demo Visual" />
   </section>
 
   <section class="features">
@@ -77,76 +81,100 @@
 
     <article class="feature">
       <img class="feature--visual" src="assets/img/placeholder.png" alt="Data Science Version Control" />
-      <header class="feature--header">
-        <h2 class="feature--title">Data Science Version Control</h2>
-      </header>
-      <div class="feature--content">
-        <p class="feature--copy">
-          Having full confidence in your models, comes with transparency & traceability. Get in
-          the driver's seat with AskAnna version control. It is Git for Data Scientists. Your
-          dashboard covers all versions of your code, models, datasets, runs as well as your
-          results. Know what happened, how it happened and who was involved within seconds.
-        </p>
+      <div class="feature--container">
+        <header class="feature--header">
+          <h2 class="feature--title">Data Science Version Control</h2>
+        </header>
+        <div class="feature--content">
+          <p class="feature--copy">
+            Having full confidence in your models, comes with transparency & traceability. Get in
+            the driver's seat with AskAnna version control. It is Git for Data Scientists. Your
+            dashboard covers all versions of your code, models, datasets, runs as well as your
+            results. Know what happened, how it happened and who was involved within seconds.
+          </p>
+        </div>
+        <footer class="feature--footer">
+          <a href="#" class="feature--link feature--link__inline">Request early access today &rsaquo;</a>
+        </footer>
       </div>
-      <footer class="feature--footer">
-        <a href="#" class="feature--link feature--link__inline">Request early access today &rsaquo;</a>
-      </footer>
     </article>
 
     <article class="feature">
       <img class="feature--visual" src="assets/img/placeholder.png" alt="Easy and flexible templates" />
-      <header class="feature--header">
-        <h2 class="feature--title">Easy and flexible templates</h2>
-      </header>
-      <div class="feature--content">
-        <p class="feature--copy">
-          Stop doing the same thing over and over again. Just reuse the code, models and projects
-          structures you love and kickstart your project. Data Science projects get messy and
-          every project is just a bit different, it’s a fact. Even more so when you are working in
-          teams, you want to be able to structure your projects so everyone gets it. Using
-          existing or creating your own templates will make your life easier.
-        </p>
+      <div class="feature--container">
+        <header class="feature--header">
+          <h2 class="feature--title">Easy and flexible templates</h2>
+        </header>
+        <div class="feature--content">
+          <p class="feature--copy">
+            Stop doing the same thing over and over again. Just reuse the code, models and projects
+            structures you love and kickstart your project. Data Science projects get messy and
+            every project is just a bit different, it’s a fact. Even more so when you are working in
+            teams, you want to be able to structure your projects so everyone gets it. Using
+            existing or creating your own templates will make your life easier.
+          </p>
+        </div>
+        <footer class="feature--footer">
+          <a href="#" class="feature--link feature--link__inline">Start with a template &rsaquo;</a>
+        </footer>
       </div>
-      <footer class="feature--footer">
-        <a href="#" class="feature--link feature--link__inline">Start with a template &rsaquo;</a>
-      </footer>
     </article>
 
     <article class="feature">
 
       <img class="feature--visual" src="assets/img/placeholder.png" alt="Operational in 15 minutes (not days)" />
-
-      <header class="feature--header">
-        <h2 class="feature--title">Operational in 15 minutes (not days)</h2>
-      </header>
-      <div class="feature--content">
-        <p class="feature--copy">
-          Easy does it. Just AskAnna to create the infrastructure you want. Setting up the
-          infrastructure to operationalize your Data Science used to take days. Some IT-er had to
-          get in on it, and you know you are not priority number 1. Take back control and
-          configure your own infrastructure with our Web UI or CLI. Of course you can talk the
-          language you prefer (Python, Yamml).
-        </p>
+      <div class="feature--container">
+        <header class="feature--header">
+          <h2 class="feature--title">Operational in 15 minutes (not days)</h2>
+        </header>
+        <div class="feature--content">
+          <p class="feature--copy">
+            Easy does it. Just AskAnna to create the infrastructure you want. Setting up the
+            infrastructure to operationalize your Data Science used to take days. Some IT-er had to
+            get in on it, and you know you are not priority number 1. Take back control and
+            configure your own infrastructure with our Web UI or CLI. Of course you can talk the
+            language you prefer (Python, Yamml).
+          </p>
+        </div>
+        <footer class="feature--footer">
+          <a href="#" class="feature--link feature--link__inline">Learn about AskAnna's principles &rsaquo;</a>
+        </footer>
       </div>
-      <footer class="feature--footer">
-        <a href="#" class="feature--link feature--link__inline">Learn about AskAnna's principles &rsaquo;</a>
-      </footer>
     </article>
   </section>
 
   <section class="manifesto">
-    <h2 class="manifesto--title">Automate, Learn, Act!</h2>
-    <h3 class="manifesto--lead">
-      As Data Scientists we understand how time consuming getting started is. Creating your model,
-      getting it to work, briefing the engineers. Working with different API’s. But no more! We
-      are committed to creating the best Data Science tools to improve your efficiency and bring
-      back the focus on the things you love doing.
-    </h3>
+    <div class="manifesto--container">
+      <img class="manifesto--visual" src="assets/img/icon-outline.svg" alt="AskAnna" />
+      <h2 class="manifesto--title">Automate, Learn, Act!</h2>
+      <h3 class="manifesto--lead">
+        As Data Scientists we understand how time consuming getting started is. Creating your model,
+        getting it to work, briefing the engineers. Working with different API’s. But no more! We
+        are committed to creating the best Data Science tools to improve your efficiency and bring
+        back the focus on the things you love doing.
+      </h3>
+    </div>
   </section>
 
   <section class="subscribe">
     <h2 class="subscribe--title">Join the Movement.</h2>
-    <p class="subscribe--note">&iexcl;Viva La Data Science Revoluci&oacute;n&excl;</p>
+    <div class="subscribe--note">
+      <svg class="note--icon note--icon_spark" width="100%" height="100%" viewBox="0 0 53 91" fill="none"
+        xmlns="http://www.w3.org/2000/svg">
+        <path fill-rule="evenodd" clip-rule="evenodd"
+          d="M19.9757 0.945C18.7263 -0.310969 16.6954 -0.316319 15.4394 0.933049C14.1834 2.18242 14.1781 4.21339 15.4274 5.46936L47.4808 37.692C48.7302 38.948 50.7611 38.9534 52.0171 37.704C53.2731 36.4546 53.2784 34.4237 52.0291 33.1677L19.9757 0.945ZM48.3773 72.9059C50.0227 72.2495 50.8245 70.3835 50.1682 68.738C49.5118 67.0925 47.6457 66.2907 46.0003 66.9471L2.56299 84.2747C0.917536 84.9311 0.115738 86.7971 0.772128 88.4426C1.42852 90.088 3.29453 90.8898 4.93999 90.2334L48.3773 72.9059ZM4.325 43.0411C2.58203 42.7242 0.912169 43.8802 0.595265 45.6232C0.278361 47.3662 1.43442 49.036 3.17739 49.3529L31.4049 54.4852C33.1479 54.8021 34.8177 53.646 35.1346 51.9031C35.4515 50.1601 34.2955 48.4902 32.5525 48.1733L4.325 43.0411Z"
+          fill="#8559FF" />
+      </svg>
+
+
+      <p>&iexcl;Viva La Data Science Revoluci&oacute;n&excl;</p>
+      <svg class="note--icon note--icon_spark" width="100%" height="100%" viewBox="0 0 53 57" fill="none"
+        xmlns="http://www.w3.org/2000/svg">
+        <path fill-rule="evenodd" clip-rule="evenodd"
+          d="M49.5441 7.23116C51.3082 7.06885 52.6067 5.50719 52.4444 3.74309C52.2821 1.979 50.7204 0.680493 48.9563 0.842803L14.1999 4.04065C12.4358 4.20296 11.1373 5.76462 11.2996 7.52872C11.4619 9.29282 13.0236 10.5913 14.7877 10.429L49.5441 7.23116ZM8.92731 55.7727C10.0213 57.1661 12.0377 57.4089 13.4311 56.3149C14.8245 55.221 15.0673 53.2045 13.9733 51.8111L6.58042 42.3945C5.48646 41.0011 3.47003 40.7584 2.07662 41.8523C0.683197 42.9463 0.440441 44.9627 1.53441 46.3562L8.92731 55.7727ZM41.492 43.6275C43.0987 44.3737 45.0061 43.6761 45.7523 42.0694C46.4986 40.4626 45.801 38.5552 44.1942 37.809L13.3083 23.4649C11.7016 22.7187 9.79414 23.4163 9.04794 25.023C8.30174 26.6297 8.99933 28.5371 10.6061 29.2833L41.492 43.6275Z"
+          fill="#8559FF" />
+      </svg>
+    </div>
     <form class="subscribe--form">
       <input class="form--email" type="email" placeholder="e-mail" /><input class="form--submit" type="submit"
         value="subscribe" />
@@ -158,7 +186,8 @@
   </section>
 
   <footer class="footer">
-    <p>Copyright ©2020 AskAnna. All rights reserved. hello@askanna.io</p>
+    <p>Copyright ©2020 AskAnna. All rights reserved.</p>
+    <p><a class="footer--link" href="mailto:hello@askanna.io">hello@askanna.io</a></p>
   </footer>
 </body>
 
