--- a/index.html
+++ b/index.html
@@ -67,13 +67,14 @@
     </div>
   </header>
   <div class="hero--devider">
-    <img src="assets/img/bg-graph.png" class="hero--devider--image" />
+    <img src="assets/img/mb-bg-graph.png" class="hero--devider--image mb--visual" />
+    <img src="assets/img/bg-graph.png" class="hero--devider--image mb--hidden" />
   </div>
 
   <section class="demo">
     <h2 class="demo--title">Skip ahead, with AskAnna.</h2>
-    <img class="demo--visual mb--visual" src="assets/img/mb-visual.png" alt="AskAnna Demo Visual" />
-    <img class="demo--visual mb--hidden" src="assets/img/dt-visual.png" alt="AskAnna Demo Visual" />
+    <img class="demo--visual mb--visual" src="assets/img/mb-visual.png" alt="AskAnna Demo Visual" /><img
+      class="demo--visual mb--hidden" src="assets/img/dt-visual.png" alt="AskAnna Demo Visual" />
   </section>
 
   <section class="features">
