--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
   <header class="hero">
     <div class="hero--content">
       <h1 class="hero--title">
-        Your next Data Science project starts here.
+        Kickstart your next Data Science project
       </h1>
       <h2 class="hero--lead">
-        Kickstart Machine Learning, Ai and, Data Science projects with our reusable templates,
-        version control and automation tools. Be operational in minutes.
+        With our reusable data science templates, version control and MLOps automation tools. Your project will be up
+        and running in minutes. Sorry DevOps. We asked Anna.
       </h2>
       <a href="#" class="hero--link hero--link__cta pill">
         Try AskAnna for free
@@ -61,8 +61,7 @@
         </svg>
       </div>
       <p class="hero--small">
-        AskAnna will handle the operations and handoff. So you can focus on the science and the
-        data.
+        AskAnna will handle the infrastructure & MLOps. So you can focus on the science and the data.
       </p>
     </div>
   </header>
@@ -88,10 +87,10 @@
         </header>
         <div class="feature--content">
           <p class="feature--copy">
-            Having full confidence in your models, comes with transparency & traceability. Get in
-            the driver's seat with AskAnna version control. It is Git for Data Scientists. Your
-            dashboard covers all versions of your code, models, datasets, runs as well as your
-            results. Know what happened, how it happened and who was involved within seconds.
+            Having full confidence in your models, comes with transparency, traceability and reproducibility. Get in the
+            driver's seat with AskAnna Data Science version control. You’ll have a central dashboard where you can
+            easily check how a result was generated. One location where you can see the input used, which results were
+            generated, and on what environment & code the job was running. All within seconds and on just one page.
           </p>
         </div>
         <footer class="feature--footer">
@@ -108,11 +107,10 @@
         </header>
         <div class="feature--content">
           <p class="feature--copy">
-            Stop doing the same thing over and over again. Just reuse the code, models and projects
-            structures you love and kickstart your project. Data Science projects get messy and
-            every project is just a bit different, it’s a fact. Even more so when you are working in
-            teams, you want to be able to structure your projects so everyone gets it. Using
-            existing or creating your own templates will make your life easier.
+            Stop doing the same thing over and over again. Just reuse the code, models and even project structures you
+            love. It’s cookiecutter Data Science deluxe. Especially when you are working in teams, you want to be able
+            to structure your projects so everyone gets it. Using existing or creating your own templates will make your
+            life so much easier.
           </p>
         </div>
         <footer class="feature--footer">
@@ -126,19 +124,18 @@
       <img class="feature--visual" src="assets/img/placeholder.png" alt="Operational in 15 minutes (not days)" />
       <div class="feature--container">
         <header class="feature--header">
-          <h2 class="feature--title">Operational in 15 minutes (not days)</h2>
+          <h2 class="feature--title">Up and running in 15 minutes</h2>
         </header>
         <div class="feature--content">
           <p class="feature--copy">
-            Easy does it. Just AskAnna to create the infrastructure you want. Setting up the
-            infrastructure to operationalize your Data Science used to take days. Some IT-er had to
-            get in on it, and you know you are not priority number 1. Take back control and
-            configure your own infrastructure with our Web UI or CLI. Of course you can talk the
-            language you prefer (Python, Yamml).
+            Easy does it. Use AskAnna to create the Data Science DevOps infrastructure you want using Yaml. Setting up
+            the infrastructure to operationalize used to take days with DevOps. Your project was on the list and
+            probably not priority number 1. Take back control over your MLOps and easily configure your own
+            infrastructure in 15 minutes.
           </p>
         </div>
         <footer class="feature--footer">
-          <a href="#" class="feature--link feature--link__inline">Learn about AskAnna's principles &rsaquo;</a>
+          <a href="#" class="feature--link feature--link__inline">Learn about AskAnna’s principles &rsaquo;</a>
         </footer>
       </div>
     </article>
@@ -149,10 +146,10 @@
       <img class="manifesto--visual" src="assets/img/icon-outline.svg" alt="AskAnna" />
       <h2 class="manifesto--title">Automate, Learn, Act!</h2>
       <h3 class="manifesto--lead">
-        As Data Scientists we understand how time consuming getting started is. Creating your model,
-        getting it to work, briefing the engineers. Working with different API’s. But no more! We
-        are committed to creating the best Data Science tools to improve your efficiency and bring
-        back the focus on the things you love doing.
+        As Data Scientists we understand how time consuming getting your work in production is. Creating your model,
+        getting it to work and briefing the software engineers. But no more! We are committed to creating the best Data
+        Science tools to improve your efficiency, collaboration, and speed. Let’s bring back the focus on the things you
+        love doing.
       </h3>
     </div>
   </section>
@@ -179,9 +176,8 @@
     <form class="subscribe--form">
       <input class="form--email" type="email" placeholder="e-mail" /><input class="form--submit" type="submit"
         value="subscribe" />
-      <p class="form--copy">
-        Subscribe to our newsletter if you want to become part of the future of data science
-        automation.
+      <p class="form--copy">Subscribe to our newsletter if you want
+        to become part of the future of data science automation.
       </p>
     </form>
   </section>
