--- a/index.html
+++ b/index.html
@@ -187,21 +187,7 @@
     <p><a class="footer--link" href="mailto:hello@askanna.io">hello@askanna.io</a></p>
   </footer>
 
-  <script type="text/javascript">
-    const joinLink = document.querySelector('.js-join');
-
-    function scrollThisStuff() {
-      console.log("scroll");
-      const joinAnchor = document.querySelector('#join');
-      joinAnchor.scrollIntoView({
-        behavior: "smooth",
-        block: "end",
-        inline: "nearest"
-      });
-    };
-
-    joinLink.addEventListener("click", scrollThisStuff, false);
-  </script>
+  <script src="assets/js/script.js"></script>
 </body>
 
 </html>
