--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     <ul class="menu mb--hidden">
       <li class="menu--item"><a href="#" class="menu--item--link js-join">Join the Movement</a></li>
       <li class="menu--item">
-        <a href="" class="menu--item--link menu--item--link__cta pill">Get early access</a>
+        <a href="mailto:hello@askanna.io?subject=Demo%20Request&body=Hello%20I%20would%20like%20to%20give%20AskAnna%20a%20spin!"
+          class="menu--item--link menu--item--link__cta pill">Get early access</a>
       </li>
     </ul>
   </nav>
@@ -45,7 +46,8 @@
         With our reusable data science templates, version control and MLOps automation tools. Your project will be up
         and running in minutes. Sorry DevOps. We asked Anna.
       </h2>
-      <a href="#" class="hero--link hero--link__cta pill">
+      <a href="mailto:hello@askanna.io?subject=Demo%20Request&body=Hello%20I%20would%20like%20to%20give%20AskAnna%20a%20spin!"
+        class="hero--link hero--link__cta pill">
         Try AskAnna for free
       </a>
 
@@ -94,7 +96,8 @@
           </p>
         </div>
         <footer class="feature--footer">
-          <a href="#" class="feature--link feature--link__inline">Request early access today &rsaquo;</a>
+          <a href="mailto:hello@askanna.io?subject=Demo%20Request&body=Hello%20I%20would%20like%20to%20give%20AskAnna%20a%20spin!"
+            class="feature--link feature--link__inline">Request early access today &rsaquo;</a>
         </footer>
       </div>
     </article>
@@ -114,7 +117,8 @@
           </p>
         </div>
         <footer class="feature--footer">
-          <a href="#" class="feature--link feature--link__inline">Start with a template &rsaquo;</a>
+          <a href="mailto:hello@askanna.io?subject=Demo%20Request&body=Hello%20I%20would%20like%20to%20give%20AskAnna%20a%20spin!"
+            class="feature--link feature--link__inline">Start with a template &rsaquo;</a>
         </footer>
       </div>
     </article>
@@ -135,13 +139,14 @@
           </p>
         </div>
         <footer class="feature--footer">
-          <a href="#" class="feature--link feature--link__inline">Learn about AskAnna’s principles &rsaquo;</a>
+          <a href="#" class="feature--link feature--link__inline js-manifesto">Learn about AskAnna’s principles
+            &rsaquo;</a>
         </footer>
       </div>
     </article>
   </section>
 
-  <section class="manifesto">
+  <section class="manifesto" id="manifesto">
     <div class="manifesto--container">
       <img class="manifesto--visual" src="assets/img/icon-outline.svg" alt="AskAnna" />
       <h2 class="manifesto--title">Automate, Learn, Act!</h2>
