--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
         AskAnna will handle the infrastructure & MLOps. So you can focus on the science and the data.
       </p>
     </div>
+    <div class="hero--footer">
+      <img src="assets/img/mb-graph-frame.png" alt="devider" class="hero--devider--image mb--visual" />
+      <img src="assets/img/dt-graph-frame.png" alt="devider" class="hero--devider--image mb--hidden" />
+    </div>
   </header>
-  <div class="hero--devider">
-    <img src="assets/img/mb-bg-graph.png" class="hero--devider--image mb--visual" />
-    <img src="assets/img/bg-graph.png" class="hero--devider--image mb--hidden" />
-  </div>
 
   <section class="demo">
     <h2 class="demo--title">Skip ahead, with AskAnna.</h2>
@@ -82,7 +82,7 @@
     <h2 class="features--title">Why use AskAnna?</h2>
 
     <article class="feature">
-      <img class="feature--visual" src="assets/img/placeholder.png" alt="Data Science Version Control" />
+      <img class="feature--visual" src="assets/img/versioncontrol.gif" alt="Data Science Version Control" />
       <div class="feature--container">
         <header class="feature--header">
           <h2 class="feature--title">Data Science Version Control</h2>
@@ -103,7 +103,7 @@
     </article>
 
     <article class="feature">
-      <img class="feature--visual" src="assets/img/placeholder.png" alt="Easy and flexible templates" />
+      <img class="feature--visual" src="assets/img/template.png" alt="Easy and flexible templates" />
       <div class="feature--container">
         <header class="feature--header">
           <h2 class="feature--title">Easy and flexible templates</h2>
@@ -125,7 +125,7 @@
 
     <article class="feature">
 
-      <img class="feature--visual" src="assets/img/placeholder.png" alt="Operational in 15 minutes (not days)" />
+      <img class="feature--visual" src="assets/img/15mins.png" alt="Operational in 15 minutes (not days)" />
       <div class="feature--container">
         <header class="feature--header">
           <h2 class="feature--title">Up and running in 15 minutes</h2>
